--- a/src/FsChessPgn/FsChessPgn.fsproj
+++ b/src/FsChessPgn/FsChessPgn.fsproj
@@ -121,6 +121,7 @@
     <Compile Include="pMove.fs" />
     <Compile Include="MoveTextEntry.fs" />
     <Compile Include="GameUnencoded.fs" />
+    <Compile Include="GameRows.fs" />
     <Compile Include="Index.fs" />
     <Compile Include="MoveUtil.fs" />
     <Compile Include="MoveEncoded.fs" />
@@ -139,7 +140,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Json" Version="0.4.0" />
-    <PackageReference Include="LightningDB" Version="0.13.0" />
+    <PackageReference Include="LevelDB.Standard" Version="2.1.6.1" />
     <PackageReference Include="MessagePack" Version="2.2.85" />
     <PackageReference Include="MessagePack.FSharpExtensions" Version="2.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
