--- a/src/Test/Test.fsproj
+++ b/src/Test/Test.fsproj
@@ -23,10 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FsPickler" Version="5.3.2" />
-    <PackageReference Include="LightningDB" Version="0.13.0" />
-    <PackageReference Include="MessagePack" Version="2.2.85" />
-    <PackageReference Include="MessagePack.FSharpExtensions" Version="2.1.0" />
+    <PackageReference Include="FSharp.Json" Version="0.4.0" />
   </ItemGroup>
 
   <ItemGroup>
