--- a/src/FsChessPgn/FsChessPgn.fsproj
+++ b/src/FsChessPgn/FsChessPgn.fsproj
@@ -7,7 +7,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OtherFlags />
-    <DocumentationFile />
+    <DocumentationFile>D:\GitHub\Grampus\debug\FsChessPgn.XML</DocumentationFile>
     <OutputPath>D:\GitHub\Grampus\debug</OutputPath>
   </PropertyGroup>
 
