--- a/src/Test/Test.fsproj
+++ b/src/Test/Test.fsproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Formatting" Version="8.0.1" />
     <PackageReference Include="FSharp.Json" Version="0.4.0" />
   </ItemGroup>
 
