--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,5 @@ src/FsChess.WinForms/Engines/2/LS15-20x256SE-jj-9-75000000.pb.gz
 src/FsChess.WinForms/Engines/2/README.txt
 src/FsChess.WinForms/Engines/2rel/komodo-12.1.1-64bit.exe
 src/FsChess.WinForms/Engines/2rel/komodo.cmd
+*.dll
+*.exe
