--- a/src/BatchUtils/BatchUtils.fsproj
+++ b/src/BatchUtils/BatchUtils.fsproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\FsChess.WinForms\FsChess.WinForms.fsproj" />
+	  <ProjectReference Include="..\FsChess.WinForms\GrampusWinForms.fsproj" />
 	  <ProjectReference Include="..\GrampusLib\GrampusLib.fsproj" />
 	</ItemGroup>
 
