--- a/src/Grampus/Grampus.fsproj
+++ b/src/Grampus/Grampus.fsproj
@@ -43,7 +43,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\FsChess.WinForms\FsChess.WinForms.fsproj" />
+	  <ProjectReference Include="..\FsChess.WinForms\GrampusWinForms.fsproj" />
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
