--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,6 @@ src/FsChess.WinForms/Engines/2rel/komodo-12.1.1-64bit.exe
 src/FsChess.WinForms/Engines/2rel/komodo.cmd
 *.dll
 *.exe
+src/GrampusWinForms/Engines/2/lc0-v0.26.3-windows-gpu-nvidia-cudnn.zip
+src/GrampusWinForms/Engines/2/LS15-20x256SE-jj-9-75000000.pb.gz
+src/GrampusWinForms/Engines/1/stockfish_12_win_x64_modern.zip
