--- a/src/BatchUtils/BatchUtils.fsproj
+++ b/src/BatchUtils/BatchUtils.fsproj
@@ -29,8 +29,8 @@
   </ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\FsChess.WinForms\GrampusWinForms.fsproj" />
 	  <ProjectReference Include="..\GrampusLib\GrampusLib.fsproj" />
+	  <ProjectReference Include="..\GrampusWinForms\GrampusWinForms.fsproj" />
 	</ItemGroup>
 
 	<ItemGroup>
