--- a/tests/Grampus.Tests/Grampus.Tests.fsproj
+++ b/tests/Grampus.Tests/Grampus.Tests.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="CustomMatchers.fs" />
     <Compile Include="FsUnit.fs" />
     <Compile Include="Result.fs" />
+    <Compile Include="Piece.fs" />
     <Compile Include="Board.fs" />
     <Compile Include="Game.fs" />
     <Compile Include="MoveEntry.fs" />
