--- a/tests/Grampus.Tests/Grampus.Tests.fsproj
+++ b/tests/Grampus.Tests/Grampus.Tests.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="Piece.fs" />
     <Compile Include="Board.fs" />
     <Compile Include="Game.fs" />
+    <Compile Include="Repertoire.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
