--- a/tests/Grampus.Tests/Grampus.Tests.fsproj
+++ b/tests/Grampus.Tests/Grampus.Tests.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="Repertoire.fs" />
     <Compile Include="Tree.fs" />
     <Compile Include="Filter.fs" />
+    <Compile Include="Grampus.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
