--- a/tests/Grampus.Tests/Grampus.Tests.fsproj
+++ b/tests/Grampus.Tests/Grampus.Tests.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="Tree.fs" />
     <Compile Include="Filter.fs" />
     <Compile Include="Grampus.fs" />
+    <Compile Include="Index.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
