--- a/tests/Grampus.Tests/Grampus.Tests.fsproj
+++ b/tests/Grampus.Tests/Grampus.Tests.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Grampus.fs" />
     <Compile Include="Index.fs" />
     <Compile Include="Eco.fs" />
+    <Compile Include="Headers.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
