--- a/src/GrampusLib/GrampusLib.fsproj
+++ b/src/GrampusLib/GrampusLib.fsproj
@@ -134,7 +134,7 @@
     <Compile Include="RegParse.fs" />
     <Compile Include="PgnGames.fs" />
     <Compile Include="PgnWriter.fs" />
-    <Compile Include="Filter.fs" />
+    <Compile Include="Filters.fs" />
     <Compile Include="StaticTree.fs" />
     <Compile Include="Repertoire.fs" />
     <Compile Include="GrampusFile.fs" />
