--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,11 @@ src/GrampusWinForms/Engines/2/lc0-v0.26.3-windows-gpu-nvidia-cudnn.zip
 src/GrampusWinForms/Engines/2/LS15-20x256SE-jj-9-75000000.pb.gz
 src/GrampusWinForms/Engines/1/stockfish_12_win_x64_modern.zip
 rel/net5.0-windows/Engines/2/LS15-20x256SE-jj-9-75000000.pb.gz
+inno/trees/MasterTree.grampus
+*.ldb
+inno/trees/MasterTree_FILES/tree/CURRENT
+inno/trees/MasterTree_FILES/tree/LOCK
+inno/trees/MasterTree_FILES/tree/LOG
+inno/trees/MasterTree_FILES/tree/LOG.old
+inno/trees/MasterTree_FILES/tree/MANIFEST-006469
+inno/setup.exe
