--- a/src/Grampus/Grampus.fsproj
+++ b/src/Grampus/Grampus.fsproj
@@ -26,6 +26,9 @@
     <EmbeddedResource Include="grampus.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Images\gnew.png" />
+    <EmbeddedResource Include="Images\tcls.png" />
+    <EmbeddedResource Include="Images\tree.png" />
     <EmbeddedResource Include="Images\black.png" />
     <EmbeddedResource Include="Images\white.png" />
     <EmbeddedResource Include="Images\orient.png" />
@@ -38,6 +41,8 @@
     <Compile Include="Form.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+	<ItemGroup />
 
 	<ItemGroup>
 	  <PackageReference Include="FSharp.Json" Version="0.4.0" />
