--- a/src/GrampusBatch/GrampusBatch.fsproj
+++ b/src/GrampusBatch/GrampusBatch.fsproj
@@ -21,14 +21,23 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-    <EmbeddedResource Include="batch.ico">
+    <EmbeddedResource Include="Images\batch.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Images\cls.png" />
+    <EmbeddedResource Include="Images\copyp.png" />
+    <EmbeddedResource Include="Images\edith.png" />
+    <EmbeddedResource Include="Images\new.png" />
+    <EmbeddedResource Include="Images\opn.png" />
+    <EmbeddedResource Include="Images\sav.png" />
+    <EmbeddedResource Include="Images\tree.png" />
     <Compile Include="Recents.fs" />
     <Compile Include="Dialogs.fs" />
     <Compile Include="Form.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+	<ItemGroup />
 
 	<ItemGroup>
 	  <PackageReference Include="FSharp.Collections.ParallelSeq" Version="1.1.4" />
