--- a/src/GrampusBatch/GrampusBatch.fsproj
+++ b/src/GrampusBatch/GrampusBatch.fsproj
@@ -21,6 +21,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+    <EmbeddedResource Include="Images\cmp.png" />
+    <EmbeddedResource Include="Images\sete.png" />
+    <EmbeddedResource Include="Images\remc.png" />
+    <EmbeddedResource Include="Images\remn.png" />
+    <EmbeddedResource Include="Images\remv.png" />
+    <EmbeddedResource Include="Images\crf.png" />
     <EmbeddedResource Include="Images\info.png" />
     <EmbeddedResource Include="Images\batch.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
