--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,4 @@ inno/trees/MasterTree_FILES/tree/LOG
 inno/trees/MasterTree_FILES/tree/LOG.old
 inno/trees/MasterTree_FILES/tree/MANIFEST-006469
 inno/setup.exe
+docfiles/images/qd7_sq.jpg
