--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,4 @@ inno/trees/MasterTree_FILES/tree/LOG.old
 inno/trees/MasterTree_FILES/tree/MANIFEST-006469
 inno/setup.exe
 docfiles/images/qd7_sq.jpg
+docs/images/qd7_sq.jpg
